Fix learning event

--- a/public/protos.html
+++ b/public/protos.html
@@ -2117,10 +2117,10 @@
                 </tr>
               
                 <tr>
-                  <td>port_active</td>
+                  <td>status</td>
                   <td><a href="#bool">bool</a></td>
                   <td></td>
-                  <td><p>success </p></td>
+                  <td><p>port status </p></td>
                 </tr>
               
             </tbody>
