--- a/public/protos.html
+++ b/public/protos.html
@@ -2103,7 +2103,7 @@
                 </tr>
               
                 <tr>
-                  <td>port</td>
+                  <td>port_no</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
                   <td><p>datapath port number </p></td>
