--- a/public/protos.html
+++ b/public/protos.html
@@ -2807,6 +2807,13 @@ or to host_path API to list path </p></td>
                   <td><p> </p></td>
                 </tr>
               
+                <tr>
+                  <td>connecting</td>
+                  <td><a href="#bool">bool</a></td>
+                  <td></td>
+                  <td><p> </p></td>
+                </tr>
+              
             </tbody>
           </table>
 
