--- a/public/protos.html
+++ b/public/protos.html
@@ -2973,7 +2973,7 @@
                   <td>faucetize_interval_sec</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>interval (in seconds) of periodic faucetizing task </p></td>
+                  <td><p>interval of periodic faucetizing task in seconds </p></td>
                 </tr>
               
                 <tr>
