Add radius handler to config

--- a/public/protos.html
+++ b/public/protos.html
@@ -3080,6 +3080,13 @@
                   <td><p>Secret </p></td>
                 </tr>
               
+                <tr>
+                  <td>radius_secret_handler</td>
+                  <td><a href="#string">string</a></td>
+                  <td></td>
+                  <td><p>Path to script that prints RADIUS secret </p></td>
+                </tr>
+              
             </tbody>
           </table>
 
