--- a/public/protos.html
+++ b/public/protos.html
@@ -3043,7 +3043,9 @@
                   <td>faucetize_interval_sec</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>interval of periodic faucetizing task in seconds </p></td>
+                  <td><p>interval of periodic faucetizing task in seconds
+NB: not setting the interval indicates faucetizer will
+    write behavioral config immediately after an inode change </p></td>
                 </tr>
               
                 <tr>
