--- a/public/protos.html
+++ b/public/protos.html
@@ -3044,8 +3044,9 @@
                   <td><a href="#int32">int32</a></td>
                   <td></td>
                   <td><p>interval of periodic faucetizing task in seconds
-NB: not setting the interval indicates faucetizer will
-    write behavioral config immediately after an inode change </p></td>
+NB: not setting the interval or explicitly setting it to 0
+    indicates faucetizer will write behavioral config
+    immediately after an inode change </p></td>
                 </tr>
               
                 <tr>
