--- a/public/protos.html
+++ b/public/protos.html
@@ -3437,7 +3437,7 @@
                   <td>varz_port</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>port debounce time in seconds </p></td>
+                  <td><p>port number to curl for varz list </p></td>
                 </tr>
               
             </tbody>
