--- a/public/protos.html
+++ b/public/protos.html
@@ -3054,10 +3054,10 @@
                   <td>faucetize_interval_sec</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>interval of periodic faucetizing task in seconds
-NB: not setting the interval or explicitly setting it to 0
-    indicates faucetizer will write behavioral config
-    immediately after an inode change </p></td>
+                  <td><p>interval of periodic faucetizing task in seconds.
+NB: no value or setting to 0 indicates behavioral config
+file will be updated immediately after an placement,
+behavior and structural config file changes </p></td>
                 </tr>
               
                 <tr>
