--- a/public/protos.html
+++ b/public/protos.html
@@ -3055,9 +3055,7 @@
                   <td><a href="#int32">int32</a></td>
                   <td></td>
                   <td><p>interval of periodic faucetizing task in seconds.
-NB: no value or setting to 0 indicates behavioral config
-file will be updated immediately after an placement,
-behavior and structural config file changes </p></td>
+NB: no value or setting to 0 indicates instant faucetizing </p></td>
                 </tr>
               
                 <tr>
