--- a/public/protos.html
+++ b/public/protos.html
@@ -3061,7 +3061,8 @@
                   <td>faucetize_interval_sec</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>interval of periodic faucetizing task in seconds </p></td>
+                  <td><p>interval of periodic faucetizing task in seconds.
+NB: no value or setting to 0 indicates instant faucetizing </p></td>
                 </tr>
               
                 <tr>
