--- a/public/protos.html
+++ b/public/protos.html
@@ -3133,6 +3133,13 @@
                 </tr>
               
                 <tr>
+                  <td>unauthenticated_vlan</td>
+                  <td><a href="#int32">int32</a></td>
+                  <td></td>
+                  <td><p>VLAN for unauthenticated devices </p></td>
+                </tr>
+              
+                <tr>
                   <td>behavioral_config_file</td>
                   <td><a href="#string">string</a></td>
                   <td></td>
