--- a/public/protos.html
+++ b/public/protos.html
@@ -4380,7 +4380,7 @@ or to host_path API to list path </p></td>
           <tbody>
             
               <tr>
-                <td>unkown</td>
+                <td>unknown</td>
                 <td>0</td>
                 <td><p>unkown: no enough information to evaluate the state</p></td>
               </tr>
