Make proxy port configurable

--- a/public/protos.html
+++ b/public/protos.html
@@ -3572,6 +3572,13 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
                   <td><p>port number to curl for gauge varz list </p></td>
                 </tr>
               
+                <tr>
+                  <td>proxy_varz_port</td>
+                  <td><a href="#int32">int32</a></td>
+                  <td></td>
+                  <td><p>port number for varz proxy </p></td>
+                </tr>
+              
             </tbody>
           </table>
 
