Rever changer to forch_metrics

--- a/public/protos.html
+++ b/public/protos.html
@@ -3629,7 +3629,7 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
             <tbody>
               
                 <tr>
-                  <td>forch_varz_port</td>
+                  <td>varz_port</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
                   <td><p>port number for forch varz </p></td>
