--- a/public/protos.html
+++ b/public/protos.html
@@ -3283,7 +3283,7 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
                   <td>source_port</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>Radius port to listen on for responses </p></td>
+                  <td><p>Port to listen on for RADIUS responses </p></td>
                 </tr>
               
             </tbody>
