--- a/public/protos.html
+++ b/public/protos.html
@@ -3488,7 +3488,7 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
                   <td>targets</td>
                   <td><a href="#ProxyServerConfig.TargetsEntry">ProxyServerConfig.TargetsEntry</a></td>
                   <td>repeated</td>
-                  <td><p>map of targets with target name as key </p></td>
+                  <td><p>map of targets with path prefix as key </p></td>
                 </tr>
               
             </tbody>
