--- a/public/protos.html
+++ b/public/protos.html
@@ -3163,6 +3163,13 @@
                 </tr>
               
                 <tr>
+                  <td>tail_acl</td>
+                  <td><a href="#string">string</a></td>
+                  <td></td>
+                  <td><p>Name of the optional tail ACL to add to host ports </p></td>
+                </tr>
+              
+                <tr>
                   <td>behavioral_config_file</td>
                   <td><a href="#string">string</a></td>
                   <td></td>
