expose dva state in list_hosts API

--- a/public/protos.html
+++ b/public/protos.html
@@ -3922,6 +3922,13 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
                 </tr>
               
                 <tr>
+                  <td>dva_state</td>
+                  <td><a href="#DVAState.State">DVAState.State</a></td>
+                  <td></td>
+                  <td><p>DVA state </p></td>
+                </tr>
+              
+                <tr>
                   <td>acls</td>
                   <td><a href="#ACLState">ACLState</a></td>
                   <td>repeated</td>
