--- a/public/protos.html
+++ b/public/protos.html
@@ -3114,7 +3114,7 @@
             <tbody>
               
                 <tr>
-                  <td>pkt_rate_interval_sec</td>
+                  <td>gauge_metrics_interval_sec</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
                   <td><p>vlan packet rate polling interval in seconds </p></td>
