Record change in proto

--- a/public/protos.html
+++ b/public/protos.html
@@ -2713,6 +2713,13 @@
                   <td><p> </p></td>
                 </tr>
               
+                <tr>
+                  <td>role</td>
+                  <td><a href="#int32">int32</a></td>
+                  <td></td>
+                  <td><p> </p></td>
+                </tr>
+              
             </tbody>
           </table>
 
