--- a/public/protos.html
+++ b/public/protos.html
@@ -3368,6 +3368,13 @@
                 </tr>
               
                 <tr>
+                  <td>gauge_config_file</td>
+                  <td><a href="#string">string</a></td>
+                  <td></td>
+                  <td><p>name of gauge config file </p></td>
+                </tr>
+              
+                <tr>
                   <td>faucetize_interval_sec</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
