--- a/public/protos.html
+++ b/public/protos.html
@@ -5402,7 +5402,7 @@ or to host_path API to list path </p></td>
                 </tr>
               
                 <tr>
-                  <td>ip_addresses</td>
+                  <td>mac_ips</td>
                   <td><a href="#string">string</a></td>
                   <td>repeated</td>
                   <td><p>Learned IP addresses for this MAC </p></td>
