Change VLAN type to int

--- a/public/protos.html
+++ b/public/protos.html
@@ -2546,7 +2546,7 @@
               
                 <tr>
                   <td>key</td>
-                  <td><a href="#string">string</a></td>
+                  <td><a href="#int32">int32</a></td>
                   <td></td>
                   <td><p> </p></td>
                 </tr>
