--- a/public/protos.html
+++ b/public/protos.html
@@ -3208,10 +3208,10 @@
                 </tr>
               
                 <tr>
-                  <td>config_hash_cooling_sec</td>
+                  <td>config_hash_clash_timeout_sec</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>cooling time (in seconds) for config hash checking </p></td>
+                  <td><p>timeout for unmatched config hash </p></td>
                 </tr>
               
             </tbody>
