--- a/public/protos.html
+++ b/public/protos.html
@@ -3208,10 +3208,10 @@
                 </tr>
               
                 <tr>
-                  <td>config_hash_clash_timeout_sec</td>
+                  <td>config_hash_verification_timeout_sec</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>timeout for unmatched config hash </p></td>
+                  <td><p>timeout for config hash verification </p></td>
                 </tr>
               
             </tbody>
