--- a/public/protos.html
+++ b/public/protos.html
@@ -4081,10 +4081,10 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
                 </tr>
               
                 <tr>
-                  <td>check_vrrp</td>
-                  <td><a href="#bool">bool</a></td>
+                  <td>keepalived_pid_file</td>
+                  <td><a href="#string">string</a></td>
                   <td></td>
-                  <td><p>indicate if Forch should check VRRP state </p></td>
+                  <td><p>location of keepalived.pid file. Not specifying it implies no VRRP check </p></td>
                 </tr>
               
                 <tr>
