--- a/public/protos.html
+++ b/public/protos.html
@@ -3187,6 +3187,13 @@
                   <td><p>eth src IP </p></td>
                 </tr>
               
+                <tr>
+                  <td>vid</td>
+                  <td><a href="#int32">int32</a></td>
+                  <td></td>
+                  <td><p>vlan id </p></td>
+                </tr>
+              
             </tbody>
           </table>
 
