--- a/public/protos.html
+++ b/public/protos.html
@@ -3948,7 +3948,7 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
                   <td>max_radius_retries</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>Max Radius backoff count </p></td>
+                  <td><p>Max Radius retry count </p></td>
                 </tr>
               
                 <tr>
