Adding sequester timeout. (#296)

--- a/public/protos.html
+++ b/public/protos.html
@@ -4078,6 +4078,13 @@ segments </p></td>
                   <td><p>port on which the grpc server receives testing result </p></td>
                 </tr>
               
+                <tr>
+                  <td>sequester_timeout_sec</td>
+                  <td><a href="#int32">int32</a></td>
+                  <td></td>
+                  <td><p>DUT will return to operational state if no DeviceReport is received within this timeout. </p></td>
+                </tr>
+              
             </tbody>
           </table>
 
