Adding incremental enable

--- a/public/protos.html
+++ b/public/protos.html
@@ -4085,6 +4085,13 @@ segments </p></td>
                   <td><p>DUT will return to operational state if no DeviceReport is received within this timeout. </p></td>
                 </tr>
               
+                <tr>
+                  <td>allowed_list</td>
+                  <td><a href="#string">string</a></td>
+                  <td>repeated</td>
+                  <td><p>List of device macs that will be sequestered for testing </p></td>
+                </tr>
+              
             </tbody>
           </table>
 
