--- a/public/protos.html
+++ b/public/protos.html
@@ -2121,6 +2121,13 @@
                 </tr>
               
                 <tr>
+                  <td>assigned_segment</td>
+                  <td><a href="#string">string</a></td>
+                  <td></td>
+                  <td><p> </p></td>
+                </tr>
+              
+                <tr>
                   <td>role</td>
                   <td><a href="#string">string</a></td>
                   <td></td>
