--- a/public/protos.html
+++ b/public/protos.html
@@ -4090,7 +4090,7 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
               
                 <tr>
                   <td>service_address</td>
-                  <td><a href="#int32">int32</a></td>
+                  <td><a href="#string">string</a></td>
                   <td></td>
                   <td><p>target server address of results service. </p></td>
                 </tr>
