--- a/public/protos.html
+++ b/public/protos.html
@@ -4134,7 +4134,7 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
                 </tr>
               
                 <tr>
-                  <td>default_auto_sequestering</td>
+                  <td>auto_sequestering</td>
                   <td><a href="#PortBehavior.AutoSequestering">PortBehavior.AutoSequestering</a></td>
                   <td></td>
                   <td><p>Default value for DeviceBehavior.auto_sequestering </p></td>
