--- a/public/protos.html
+++ b/public/protos.html
@@ -4130,7 +4130,7 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
                   <td>sequester_timeout_sec</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>DUT will return to operational state if no DeviceReport is received within this timeout. </p></td>
+                  <td><p>timeout for remote testing service, negative to disable. </p></td>
                 </tr>
               
                 <tr>
