--- a/public/protos.html
+++ b/public/protos.html
@@ -4127,6 +4127,13 @@ NB: no value or setting to 0 indicates instant faucetizing </p></td>
                 </tr>
               
                 <tr>
+                  <td>tunnel_ip</td>
+                  <td><a href="#string">string</a></td>
+                  <td></td>
+                  <td><p>local ip address for data-plane tunnels. </p></td>
+                </tr>
+              
+                <tr>
                   <td>sequester_timeout_sec</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
