--- a/public/protos.html
+++ b/public/protos.html
@@ -2176,6 +2176,13 @@
                   <td><p> </p></td>
                 </tr>
               
+                <tr>
+                  <td>scheduled_sequestering_timestamp</td>
+                  <td><a href="#string">string</a></td>
+                  <td></td>
+                  <td><p>ISO8601 timestamp string for scheduled sequestering </p></td>
+                </tr>
+              
             </tbody>
           </table>
 
