Use updated DAQ and address comments

--- a/public/protos.html
+++ b/public/protos.html
@@ -2482,7 +2482,7 @@
                   <td>tap_port</td>
                   <td><a href="#int32">int32</a></td>
                   <td></td>
-                  <td><p>Port on t1 switch </p></td>
+                  <td><p>Egress port on switch </p></td>
                 </tr>
               
             </tbody>
@@ -2510,7 +2510,7 @@
                 <td>ConfigureInterface</td>
                 <td><a href="#Endpoint">.Endpoint</a></td>
                 <td><a href="#Empty">.Empty</a></td>
-                <td><p>Configure Vxlan interface</p></td>
+                <td><p></p></td>
               </tr>
             
               <tr>
